🔧 Update org-mode refiling and auto-fill
I've turned auto-fill back on, and I've set up org-refile to be able
to quicly see which heading I want to refile to. I've also fixed the
issue with org-habit not being loaded correctly.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -32,7 +32,6 @@
 
      (require 'use-package)
      (setq use-package-always-ensure t)
-
    #+end_src
 
 ** UI Config
@@ -161,9 +160,8 @@
 ** Org Mode
    #+begin_src emacs-lisp
      (defun nl/org-mode-setup ()
-       ;; (org-indent-mode)
        (variable-pitch-mode 1)
-       (auto-fill-mode 0))
+       (auto-fill-mode 1))
 
      (defun nl/org-heading-setup ()
        ;; Scale headings
@@ -176,6 +174,9 @@
 		       (org-level-7 . 1.1)
 		       (org-level-8 . 1.1)))
 	 (set-face-attribute (car face) nil :font "Cantarell" :weight 'normal :height (cdr face))))
+
+     (require 'org-habit)
+     (add-to-list 'org-modules 'org-habit)
 
      (use-package org
        :hook (org-mode . nl/org-mode-setup)
@@ -203,11 +204,10 @@
        (set-face-attribute 'org-meta-line nil :inherit '(font-lock-comment-face fixed-pitch))
        (set-face-attribute 'org-checkbox nil  :inherit 'fixed-pitch)
 
-       (setq org-refile-targets
-	     '(("tasks.org" :maxlevel . 1)
-	       ("notes.org" :maxlevel . 1)
-	       ("habits.org" :maxlevel . 1)
-	       ("archive.org" :maxlevel . 2)))
+       (setq org-refile-targets '((org-agenda-files :maxlevel . 3)))
+
+       (setq org-outline-path-complete-in-steps nil)
+       (setq org-refile-use-outline-path t)
 
        (setq org-todo-keywords
 	     '((sequence "TODO(t)" "NEXT(n!)" "|" "DONE(d!)")
@@ -323,7 +323,7 @@
        ([remap describe-key] . helpful-key))
    #+end_src
 ** Better Mode line
-   I'm using [[https://github.com/seagle0128/doom-modeline][Doom Modeline]] with some nifty icons to spruce it up a little bit
+   I'm using [[https://github.com/seagle0128/doom-modeline][Doom Modeline]] with some nifty icons (All The Icons) to spruce it up a little bit.
    #+begin_src emacs-lisp
      (use-package doom-modeline
        :init (doom-modeline-mode 1))
@@ -442,7 +442,6 @@
 
 ** Language Server Protocol (lsp-mode)
    #+begin_src emacs-lisp
-     ;; lsp-mode
      (use-package lsp-mode
        :commands (lsp lsp-deferred)
        :hook (c-mode-common . lsp-deferred)
@@ -458,5 +457,4 @@
        :hook (lsp-mode . lsp-ui-mode)
        :custom
        (lsp-ui-doc-position 'bottm))
-
    #+end_src
