➕ Set Ivy to use virtual buffers

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -310,7 +310,9 @@
 	      ("C-k" . ivy-previous-line)
 	      ("C-d" . ivy-reverse-i-search-kill))
        :init
-       (ivy-mode 1))
+       (ivy-mode 1)
+       :config
+       (setq ivy-use-virtual-buffers t))
 
      (use-package ivy-rich
        :init (ivy-rich-mode 1))
