✨ Add lsp-mode to all programming modes
This just makes sense, If I'm going to be using lsp-mode, I might as
well enable it on the programming modes.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -475,7 +475,7 @@
    #+begin_src emacs-lisp
      (use-package lsp-mode
        :commands (lsp lsp-deferred)
-       :hook (c-mode-common . lsp-deferred)
+       :hook (prog-mode . lsp-deferred)
        :init
        (setq lsp-keymap-prefix "C-c l")
        :config
