➕ Add web-mode for web development
I have a basic web dev environment set up for React. This commit also
adds `(setq create-lockfiles nil)` because of an error that would
occur when starting React server. The error would complain that a
`.#index.js` file was not found, disabling lockfiles is the solution
to being able to continually run the server.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -81,6 +81,7 @@
       kept-new-versions 6
       kept-old-versions 2
       version-control t
+      create-lockfiles nil
       backup-directory-alist
       `((".*" . ,temporary-file-directory))
       auto-save-file-name-transforms
@@ -451,9 +452,28 @@
 	      ("\\.markdown\\'" . markdown-mode))
        :init (setq markdown-command "pandoc"))
    #+end_src
-** JSON
+** Web
    #+begin_src emacs-lisp
-     (use-package json-mode)
+     (use-package json-mode
+       :mode "\\.json$")
+
+     (use-package web-mode
+       :mode (("\\.js\\'" . web-mode)
+	      ("\\.jsx\\'" . web-mode)
+	      ("\\.ts\\'" . web-mode)
+	      ("\\.html\\'" . web-mode)
+	      ("\\.tsx\\'" . web-mode))
+       :hook ((web-mode . lsp-deferred))
+       :config
+       (setq company-tooltip-align-annotations t)
+       (setq web-mode-markup-indent-offset 2)
+       (setq web-mode-css-indent-offset 2)
+       (setq web-mode-code-indent-offset 2)
+       (setq web-mode-content-types-alist
+	     '(("jsx" . "\\.js[x]?\\'"))))
+
+     (use-package prettier
+       :hook (json-mode . prettier-mode))
    #+end_src
 ** Beancount
    #+begin_src emacs-lisp
