🔧 Disable line numbers in org-agenda
There is no use for line numbers in the org-agenda mode.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -68,6 +68,7 @@
       ;; Disable line numbers for some modes
       (dolist (mode '(org-mode-hook
 		      term-mode-hook
+		      org-agenda-mode-hook
 		      eshell-mode-hook))
 	(add-hook mode (lambda () (display-line-numbers-mode 0))))
 
