--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -399,6 +399,15 @@
 ** Auto completion
    #+begin_src emacs-lisp
      (use-package company
+       :after lsp-mode
+       :bind
+       (:map company-active-map
+	     ("<tab>" . company-complete-selection))
+       (:map lsp-mode-map
+	     ("<tab>" . company-indent-or-complete-common))
+       :custom
+       (company-minimum-prefix-length 1)
+       (company-idle-delay 0.0)
        :init
        (global-company-mode 1))
 
