➕ Add restart-emacs package
I'm tired of reloading/restarting emacs manually.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -459,6 +459,11 @@
 	 :init
 	 (exec-path-from-shell-initialize)))
    #+end_src
+** Reload Emacs
+   I'm tired of doing this manually.
+   #+begin_src emacs-lisp
+     (use-package restart-emacs)
+   #+end_src
 
 * Languages
 **  Markdown
