--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -69,6 +69,7 @@
       (dolist (mode '(org-mode-hook
 		      term-mode-hook
 		      vterm-mode-hook
+		      treemacs-mode-hook
 		      org-agenda-mode-hook
 		      eshell-mode-hook))
 	(add-hook mode (lambda () (display-line-numbers-mode 0))))
@@ -156,6 +157,7 @@
 	 "f" '(:ignore t :which-key "File")
 	 "ff" '(counsel-find-file :which-key "Find File")
 	 "fs" '(save-buffer :which-key "Save File")
+	 "ft" '(treemacs :which-key "Toggle Treemacs")
 
 	 "g" '(:ignore t :which-key "Git")
 	 "gs" '(magit-status :which-key "Git Status")
@@ -469,6 +471,13 @@
    #+begin_src emacs-lisp
      (use-package restart-emacs)
    #+end_src
+
+** UI enhancements
+*** Treemacs
+    #+begin_src emacs-lisp
+      (use-package lsp-treemacs
+	:after lsp)
+    #+end_src
 
 ** Terminal
    #+begin_src emacs-lisp
