--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -479,6 +479,13 @@
 	:after lsp)
     #+end_src
 
+** Window switching
+   #+begin_src emacs-lisp
+     (use-package ace-window
+       :bind
+       ("M-o" . ace-window)
+       :config (ace-window-display-mode 1))
+   #+end_src
 ** Terminal
    #+begin_src emacs-lisp
      (use-package vterm)
