🔧 Add new org-tag for habits

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -303,6 +303,7 @@
 	       ("@work" . ?W)
 	       ("finance" . ?F)
 	       ("event" . ?v)
+	       ("habit" . ?a)
 	       ("chore" . ?C)
 	       ("plex" . ?P)
 	       ("hobbies" . ?h)
