--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -107,10 +107,12 @@
     #+end_src
 ** Auto-tangle on save
    #+begin_src emacs-lisp
+     (defvar nl/emacs-dotfile-directory "/Users/nland/dev/github.com/ndland/dotfiles/emacs/")
+
      ;; Automatically tangle our Emacs.org config file when we save it
      (defun nl/org-babel-tangle-config ()
        (when (string-equal (file-name-directory (buffer-file-name))
-			   (expand-file-name user-emacs-directory))
+			   nl/emacs-dotfile-directory)
 	 ;; Dynamic scoping to the rescue
 	 (let ((org-confirm-babel-evaluate nil))
 	   (org-babel-tangle))))
