🐛 Fix issue with font on Mac
When doesn't have an 'else' block, so I changed it to an if so that I
can evaluate on other systems too. In this case, I only change the
font if I'm on my mac.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -59,10 +59,9 @@
       (setq visible-bell t)
 
       ;; Set the font a little bigger in OS X
-      (when (memq window-system '(mac ns x))
-	(set-face-attribute 'default nil :font "VictorMono Nerd Font" :height 140))
-
-      (set-face-attribute 'default nil :font "VictorMono Nerd Font" :height 100)
+      (if (memq window-system '(mac ns x))
+	  (set-face-attribute 'default nil :font "VictorMono Nerd Font" :height 140)
+	(set-face-attribute 'default nil :font "VictorMono Nerd Font" :height 100))
 
       (electric-pair-mode 1)
 
