➕ Add Yaml mode
So I can edit yaml files now and have some syntax coloring.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -576,3 +576,12 @@
        :custom
        (lsp-ui-doc-position 'bottm))
    #+end_src
+** Yaml
+   #+begin_src emacs-lisp
+     (use-package yaml-mode
+       :config
+       (add-hook 'yaml-mode-hook
+		 (lambda ()
+		   (define-key yaml-mode-map "\C-m" 'newline-and-indent))))
+   #+end_src
+
