🔧 Add keybinding for recent files
I was tired of `C-x C-r` for recent files, add that to my leader key
bindings.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -163,6 +163,7 @@
 	 "ff" '(counsel-find-file :which-key "Find File")
 	 "fs" '(save-buffer :which-key "Save File")
 	 "ft" '(treemacs :which-key "Toggle Treemacs")
+	 "fr" '(counsel-recentf :which-key "Recent Files")
 
 	 "g" '(:ignore t :which-key "Git")
 	 "gs" '(magit-status :which-key "Git Status")
