🐛 Fix issue with using straight
I had an issue when I was trying to use straight for all of my
packages. This issue has been resolved by making sure I had an ssh key
in Gitlab. Doh.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -28,7 +28,7 @@
        (load bootstrap-file nil 'nomessage))
 
      (straight-use-package 'use-package)
-     ;; (setq straight-use-package-by-default t)
+     (setq straight-use-package-by-default t)
 
      (require 'use-package)
      (setq use-package-always-ensure t)
@@ -38,7 +38,6 @@
 *** Color Theme
     #+begin_src emacs-lisp
       (use-package spacemacs-theme
-	:straight t
 	:defer t
 	:init
 	(load-theme 'spacemacs-dark t))
@@ -246,11 +245,9 @@
        (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
 
      (use-package evil-nerd-commenter
-       :straight t
        :bind ("C-/" . evilnc-comment-or-uncomment-lines))
 
      (use-package magit-gitflow
-       :straight t
        :hook
        (magit-mode . turn-on-magit-gitflow))
 
