--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -386,8 +386,9 @@
        (setq web-mode-content-types-alist
 	     '(("jsx" . "\\.js[x]?\\'"))))
 
-     (use-package prettier
-       :hook (json-mode . prettier-mode))
+
+     (use-package prettier-js
+       :hook (json-mode . prettier-js-mode))
    #+end_src
 ** Beancount
    #+begin_src emacs-lisp
