🔧 Update Emacs config

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -291,6 +291,7 @@
        (global-company-mode 1))
 
      (use-package company-box
+       :after company-mode
        :hook (company-mode . company-box-mode))
    #+end_src
 ** Emojis
@@ -468,6 +469,7 @@
        ([remap org-set-tags-command] . #'counsel-org-tag)
        :config
        (setq org-log-into-drawer t)
+       ;; (org-hide-drawer-toggle t)
        (setq org-agenda-files
 	     '("~/Dropbox/org/tasks.org"
 	       "~/Dropbox/org/habits.org"
@@ -583,8 +585,6 @@
 	       ("productivity" . ?p)
 	       ("emacs" . ?e)
 	       ("repair" . ?r)))
-
-       ;; (setq org-clock-in-switch-to-state "ACTIVE")
 
        (general-define-key
 	:states '(normal insert visual emacs)
