🐛 Make sure that company loads after init

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -289,7 +289,9 @@
 ** Auto completion
    #+begin_src emacs-lisp
      (use-package company
+       :ensure t
        :after lsp-mode
+       :hook (after-init . global-company)
        :bind
        (:map company-active-map
 	     ("<tab>" . company-complete-selection))
@@ -297,9 +299,7 @@
 	     ("<tab>" . company-indent-or-complete-common))
        :custom
        (company-minimum-prefix-length 1)
-       (company-idle-delay 0.0)
-       :init
-       (global-company-mode 1))
+       (company-idle-delay 0.0))
 
      (use-package company-box
        :after company-mode
