✨ Set up React environment using lsp
I don't think this is fully ready yet, but lsp is working like I want
for now.

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -315,7 +315,14 @@
    #+begin_src emacs-lisp
      (use-package flycheck
        :config
-       (global-flycheck-mode))
+       (global-flycheck-mode)
+       (setq-default flycheck-disabled-checkers
+		     (append flycheck-disabled-checkers
+			     '(javascript-jshint)))
+       (setq-default flycheck-disabled-checkers
+		     (append flycheck-disabled-checkers
+			     '(json-jsonlist)))
+       (flycheck-add-mode 'javascript-eslint 'web-mode))
    #+end_src
 ** Snippets
    #+begin_src emacs-lisp
@@ -390,6 +397,8 @@
    #+begin_src emacs-lisp
      (use-package json-mode
        :mode "\\.json$")
+
+     (use-package js2-mode)
 
      (use-package web-mode
        :mode (("\\.js\\'" . web-mode)
