--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -368,6 +368,18 @@
     #+begin_src emacs-lisp
       (use-package lsp-treemacs
 	:after lsp)
+
+      (use-package treemacs-evil
+	:after (treemacs evil)
+	:ensure t)
+
+      (use-package treemacs-projectile
+	:after (treemacs projectile)
+	:ensure t)
+
+      (use-package treemacs-magit
+	:after (treemacs magit)
+	:ensure t)
     #+end_src
 
 ** Window switching
