🐛 Fix a typo for lsp

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -463,7 +463,7 @@
      (use-package lsp-ui
        :hook (lsp-mode . lsp-ui-mode)
        :custom
-       (lsp-ui-doc-position 'bottm))
+       (lsp-ui-doc-position 'bottom))
    #+end_src
 ** Yaml
    #+begin_src emacs-lisp
