--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -1,4 +1,5 @@
 #+title: Emacs from Scratch configuration
+#+STARTUP: overview
 #+PROPERTY: header-args:emacs-lisp :tangle ./.emacs.d/init.el :mkdirp yes
 
 * Basic configuration
@@ -37,32 +38,32 @@ Definitely need some packages to improve Emacs, let's load the archives.
 #+begin_src emacs-lisp
   (use-package spacemacs-theme
     :defer t)
-
+  
   (use-package one-themes
-    :defer t
-    :init
-    (load-theme 'one-dark t))
-
-  (use-package doom-themes)
+    :defer t)
+  
+  (use-package doom-themes
+    :config
+    (load-theme 'doom-shades-of-purple t))
 #+end_src
 *** UI Changes
 #+begin_src emacs-lisp
   (setq inhibit-startup-message t)
-
+  
   (scroll-bar-mode -1) ; Disable scrollbar
   (tool-bar-mode -1) ; Disable toolbar
   (tooltip-mode -1) ; Disable tooltips
-
+  
   (menu-bar-mode -1) ; Disable the menu bar
-
+  
   ;; Set up the visual bell
   (setq visible-bell t)
-
+  
   (electric-pair-mode 1)
-
+  
   (column-number-mode)
   (global-display-line-numbers-mode t)
-
+  
   ;; Disable line numbers for some modes
   (dolist (mode '(org-mode-hook
                   term-mode-hook
@@ -72,10 +73,10 @@ Definitely need some packages to improve Emacs, let's load the archives.
                   org-agenda-mode-hook
                   eshell-mode-hook))
     (add-hook mode (lambda () (display-line-numbers-mode 0))))
-
+  
   (use-package rainbow-delimiters
     :hook (prog-mode . rainbow-delimiters-mode))
-
+  
   ;; Start Emacs fullscreen
   (custom-set-variables
    '(initial-frame-alist '((fullscreen . maximized))))
@@ -167,101 +168,97 @@ I'm tired of having to manually reload this file.
     (setq evil-want-integration t)
     :config
     (evil-mode 1))
-
+  
   (use-package evil-collection
     :after evil
     :init
     (evil-collection-init))
-
+  
   (use-package general
     :config
     (general-create-definer nl/leader-keys
       :keymaps '(normal insert visual emacs)
       :prefix "SPC"
       :global-prefix "C-SPC")
-
+  
     ;; nl is just an arbitrary name space can be changed
     (nl/leader-keys
       "a" '(:ignore t :which-key "Applications")
       ;; This comes after the prefix is triggered
       "at" '(vterm :which-key "Vterm")
-
+  
       ;; This is the prefix
       "t" '(:ignore t :which-key "Toggles")
       ;; This comes after the prefix is triggered
       "tt" '(counsel-load-theme :which-key "Choose Theme")
-
+  
       "f" '(:ignore t :which-key "File")
       "ff" '(counsel-find-file :which-key "Find File")
       "fs" '(save-buffer :which-key "Save File")
       "ft" '(treemacs :which-key "Toggle Treemacs")
       "fr" '(counsel-recentf :which-key "Recent Files")
-
+  
       "g" '(:ignore t :which-key "Git")
       "gs" '(magit-status :which-key "Git Status")
       "gf" '(magit-gitflow-popup :which-key "Git Flow")
-
+  
       "n" '(:ignore t :which-key "Notes")
       "ns" '(nl/search-org-notes :which-key "Search org notes")
-
+  
       "o" '(:ignore t :which-key "Org")
       "oa" '(org-agenda :which-key "Org Agenda")
       "oc" '(org-capture :which-key "Org Capture")
       "oh" '(org-archive-subtree-default :which-key "Org Archive")
       "or" '(org-refile :which-key "Org Refile")
       "ot" '(org-todo :which-key "Org TODO")
-
+      "oi" '(org-time-stamp-inactive :which-key "Org timestamp inactive")
+  
       "s" '(:ignore t :which-key "Snippets")
       "si" '(yas-insert-snippet :which-key "Insert Snippet")
       "sn" '(yas-new-snippet :which-key "New Snippet")
-
+  
       "b" '(:ignore t :which-key "Buffers")
       "bb" '(counsel-ibuffer :which-key "Switch Buffers")))
 #+end_src
 ** Org Mode
 #+begin_src emacs-lisp
-  (defun nl/org-mode-setup ()
-    (variable-pitch-mode 1)
-    (auto-fill-mode 1))
-
   (defun nl/org-heading-setup ()
     ;; Scale headings
     (dolist (face '((org-level-1 . 1.5)
-                    (org-level-2 . 1.1)
-                    (org-level-3 . 1.05)
-                    (org-level-4 . 1.1)
-                    (org-level-5 . 1.1)
-                    (org-level-6 . 1.1)
-                    (org-level-7 . 1.1)
-                    (org-level-8 . 1.1)))
+		    (org-level-2 . 1.1)
+		    (org-level-3 . 1.05)
+		    (org-level-4 . 1.1)
+		    (org-level-5 . 1.1)
+		    (org-level-6 . 1.1)
+		    (org-level-7 . 1.1)
+		    (org-level-8 . 1.1)))
       (set-face-attribute (car face) nil :font "Iosevka Etoile" :weight 'normal :height (cdr face))))
-
+  
   (require 'org-habit)
   (add-to-list 'org-modules 'org-habit)
-
+  
+  (defun nl/org-mode-setup ()
+    (org-indent-mode)
+    (variable-pitch-mode 1)
+    (auto-fill-mode 1))
+  
   (use-package org
-    :hook
-    ((org-mode . nl/org-mode-setup)
-     (org-mode . org-indent-mode))
-    :bind
-    ([remap org-set-tags-command] . #'counsel-org-tag)
+    :bind ([remap org-set-tags-command] . #'counsel-org-tag)
+    :hook (org-mode . nl/org-mode-setup)
     :config
     (setq org-log-into-drawer t)
-    ;; (org-hide-drawer-toggle t)
     (setq org-agenda-files '("~/Dropbox/org/inbox.org"))
     (setq org-contacts-files '("~/Dropbox/org/inbox.org"))
-    ;; (setq org-agenda-include-diary t)
-
+  
     (setq org-ellipsis " ⌄"
-          org-hide-emphasis-markers t)
-    ;; (nl/org-heading-setup)
-
+	  org-hide-emphasis-markers t)
+  
     (setq org-habit-graph-column 60)
     (setq org-tags-column 120
-          org-auto-align-tags t)
+	  org-auto-align-tags t)
     (setq org-startup-with-inline-images t
-          org-image-actual-width 500)
-
+	  org-image-actual-width 500)
+  
     (set-face-attribute 'org-block nil    :foreground nil :inherit 'fixed-pitch)
     (set-face-attribute 'org-table nil    :inherit 'fixed-pitch)
     (set-face-attribute 'org-date nil     :inherit 'fixed-pitch)
@@ -276,43 +273,43 @@ I'm tired of having to manually reload this file.
     (set-face-attribute 'org-meta-line nil :inherit '(font-lock-comment-face fixed-pitch))
     (set-face-attribute 'org-checkbox nil  :inherit 'fixed-pitch)
     (set-face-attribute 'org-agenda-calendar-sexp nil :inherit 'variable-pitch :foreground "LemonChiffon")
-
+  
     (setq org-refile-targets '((org-agenda-files :maxlevel . 3)))
-
+  
     (setq org-outline-path-complete-in-steps nil)
     (setq org-refile-use-outline-path t)
-
+  
     (setq org-todo-keywords
-          '((sequence "TODO(t)" "NEXT(n!)" "|" "DONE(d!)")
-            (sequence "BACKLOG(b!)" "PLAN(p!)" "READY(r!)" "ACTIVE(a!)" "REVIEW(e!)" "WAITING(w@/!)" "HOLD(h@/!)" "|" "COMPLETED(c!)" "CANCELLED(l@/!)")))
-
+	  '((sequence "TODO(t)" "NEXT(n!)" "|" "DONE(d!)")
+	    (sequence "BACKLOG(b!)" "PLAN(p!)" "READY(r!)" "ACTIVE(a!)" "REVIEW(e!)" "WAITING(w@/!)" "HOLD(h@/!)" "|" "COMPLETED(c!)" "CANCELLED(l@/!)")))
+  
     (setq org-todo-keyword-faces
-          '(("TODO" . org-warning)
-            ("NEXT" . (:foreground "gold" :weight bold))
-            ("DONE" . (:foreground "lime green" :weight bold))
-            ("BACKLOG" . (:foreground "dim gray" :weight regular))
-            ("PLAN" . (:foreground "orange red" :weight regular))
-            ("READY" . (:foreground "spring green" :weight bold))
-            ("ACTIVE" . (:foreground "yellow" :weight bold))
-            ("REVIEW" . (:foreground "orange" :weight bold))
-            ("WAITING" . (:foreground "salmon" :weight bold))
-            ("HOLD" . (:foreground "tomato" :weight bold))
-            ("COMPLETED" . (:foreground "lime green" :weight bold))
-            ("CANCELLED" . (:foreground "red" :weight bold))))
-
+	  '(("TODO" . org-warning)
+	    ("NEXT" . (:foreground "gold" :weight bold))
+	    ("DONE" . (:foreground "lime green" :weight bold))
+	    ("BACKLOG" . (:foreground "dim gray" :weight regular))
+	    ("PLAN" . (:foreground "orange red" :weight regular))
+	    ("READY" . (:foreground "spring green" :weight bold))
+	    ("ACTIVE" . (:foreground "yellow" :weight bold))
+	    ("REVIEW" . (:foreground "orange" :weight bold))
+	    ("WAITING" . (:foreground "salmon" :weight bold))
+	    ("HOLD" . (:foreground "tomato" :weight bold))
+	    ("COMPLETED" . (:foreground "lime green" :weight bold))
+	    ("CANCELLED" . (:foreground "red" :weight bold))))
+  
     (setq org-capture-templates
-          '(("t" "Tasks")
-            ("tt" "Task" entry
-             (file+olp "~/Dropbox/org/inbox.org" "Inbox")
-             "* TODO %?\n  Captured: %U\n  %a\n %i"
-             :empty-lines 0)
-            ("td" "Task Today" entry
-             (file+olp "~/Dropbox/org/inbox.org" "Inbox")
-             "* TODO %?\nSCHEDULED: %t\n  Captured: %U\n  %a\n %i"
-             :empty-lines 0)
-            ("c" "Contacts")
-            ("cf" "Family" entry (file+headline "~/Dropbox/org/inbox.org" "Family")
-             "* %(org-contacts-template-name)
+	  '(("t" "Tasks")
+	    ("tt" "Task" entry
+	     (file+olp "~/Dropbox/org/inbox.org" "Inbox")
+	     "* TODO %?\n  Captured: %U\n  %a\n %i"
+	     :empty-lines 0)
+	    ("td" "Task Today" entry
+	     (file+olp "~/Dropbox/org/inbox.org" "Inbox")
+	     "* TODO %?\nSCHEDULED: %t\n  Captured: %U\n  %a\n %i"
+	     :empty-lines 0)
+	    ("c" "Contacts")
+	    ("cf" "Family" entry (file+headline "~/Dropbox/org/inbox.org" "Family")
+	     "* %(org-contacts-template-name)
   :PROPERTIES:
   :ADDRESS: %^{289 Cleveland St. Brooklyn, 11206 NY, USA}
   :BIRTHDAY: %^{yyyy-mm-dd}
@@ -324,9 +321,9 @@ I'm tired of having to manually reload this file.
   :ICON:
   :NOTE: %^{Note}
   :END:"
-             :empty-lines 0)
-            ("cr" "Friends" entry (file+olp "~/Dropbox/org/inbox.org" "Contacts" "Friends")
-             "* %(org-contacts-template-name)
+	     :empty-lines 0)
+	    ("cr" "Friends" entry (file+olp "~/Dropbox/org/inbox.org" "Contacts" "Friends")
+	     "* %(org-contacts-template-name)
   :PROPERTIES:
   :ADDRESS: %^{289 Cleveland St. Brooklyn, 11206 NY, USA}
   :BIRTHDAY: %^{yyyy-mm-dd}
@@ -338,47 +335,49 @@ I'm tired of having to manually reload this file.
   :ICON:
   :NOTE: %^{Note}
   :END:"
-             :empty-lines 0)))
-
+	     :empty-lines 0)))
+  
     (org-babel-do-load-languages
      'org-babel-load-languages
      '((emacs-lisp . t)
        (C . t)))
-
+  
     (setq org-tag-alist
-          '((:startgroup)
-            (:endgroup)
-            ("@home" . ?H)
-            ("@errand" . ?E)
-            ("@work" . ?W)
-            ("finance" . ?F)
-            ("event" . ?v)
-            ("habit" . ?a)
-            ("chore" . ?C)
-            ("plex" . ?P)
-            ("hobbies" . ?h)
-            ("productivity" . ?p)
-            ("emacs" . ?e)
-            ("repair" . ?r)))
-
+	  '((:startgroup)
+	    (:endgroup)
+	    ("@home" . ?H)
+	    ("@errand" . ?E)
+	    ("@work" . ?W)
+	    ("finance" . ?F)
+	    ("event" . ?v)
+	    ("habit" . ?a)
+	    ("chore" . ?C)
+	    ("plex" . ?P)
+	    ("hobbies" . ?h)
+	    ("productivity" . ?p)
+	    ("emacs" . ?e)
+	    ("repair" . ?r)))
+  
+    (nl/org-heading-setup)
+  
     (general-define-key
      :states '(normal insert visual emacs)
      :keymaps 'org-agenda-mode-map
      "j" 'org-agenda-next-line
      "k" 'org-agenda-previous-line))
-
+  
   (use-package org-bullets
     :after org
     :hook (org-mode . org-bullets-mode))
-
+  
   (defun nl/org-mode-visual-fill ()
-    (setq visual-fill-column-width 120
-          visual-fill-column-center-text t)
+    (setq visual-fill-column-width 130
+	  visual-fill-column-center-text t)
     (visual-fill-column-mode 1))
-
+  
   (use-package visual-fill-column
     :hook (org-mode . nl/org-mode-visual-fill))
-
+  
   (use-package org-contrib
     :after org
     :config
@@ -406,11 +405,15 @@ I'm tired of having to manually reload this file.
     (ivy-mode 1)
     :config
     (setq ivy-use-virtual-buffers t))
-
+  
   (use-package ivy-rich
     :after counsel
     :init (ivy-rich-mode 1))
-
+  
+  (use-package all-the-icons-ivy-rich
+    :ensure t
+    :init (all-the-icons-ivy-rich-mode 1))
+  
   (use-package counsel
     :bind (("M-x" . counsel-M-x)
            ("C-x b" . counsel-ibuffer)
@@ -573,6 +576,17 @@ I'm tired of doing this manually.
     :after (treemacs magit)
     :ensure t)
 #+end_src
+*** Golden Ratio
+This is a neat package that will automatically resize your splits for
+you!
+#+begin_src emacs-lisp
+  (use-package golden-ratio
+    :config (golden-ratio-mode 1))
+  
+  (define-advice select-window (:after (window &optional no-record) golden-ratio-resize-window)
+      (golden-ratio)
+      nil)
+#+end_src
 
 ** Window switching
 #+begin_src emacs-lisp
@@ -607,27 +621,45 @@ I'm tired of doing this manually.
 #+begin_src emacs-lisp
   (use-package json-mode
     :mode "\\.json$")
-
-  (use-package js2-mode)
-
-  (use-package web-mode
-    :mode (("\\.js\\'" . web-mode)
-           ("\\.jsx\\'" . web-mode)
-           ("\\.ts\\'" . web-mode)
-           ("\\.html\\'" . web-mode)
-           ("\\.tsx\\'" . web-mode))
-    :hook ((web-mode . lsp-deferred))
-    :config
-    (setq company-tooltip-align-annotations t)
-    (setq web-mode-markup-indent-offset 2)
-    (setq web-mode-css-indent-offset 2)
-    (setq web-mode-code-indent-offset 2)
-    (setq web-mode-content-types-alist
-          '(("jsx" . "\\.js[x]?\\'"))))
-
-
+  
+  (use-package rjsx-mode
+    :mode (("\\.js\\'" . rjsx-mode)
+           ("\\.jsx\\'" . rjsx-mode))
+    :config (setq js-indent-level 2))
+  
+  (defun setup-tide-mode()
+    "Setup function for tide"
+    (interactive)
+    (tide-setup)
+    (flycheck-mode +1)
+    (setq flycheck-check-syntax-automatically '(save mode-enabled))
+    (company-mode +1))
+  
+  (use-package tide
+    :after (rjsx-mode company flycheck)
+    :hook (rjsx-mode . setup-tide-mode))
+  
+  ;; (use-package js2-mode)
+  
+  ;; (use-package web-mode
+  ;;   :mode (("\\.js\\'" . web-mode)
+  ;;          ("\\.jsx\\'" . web-mode)
+  ;;          ("\\.ts\\'" . web-mode)
+  ;;          ("\\.html\\'" . web-mode)
+  ;;          ("\\.tsx\\'" . web-mode))
+  ;;   :hook ((web-mode . lsp-deferred))
+  ;;   :config
+  ;;   (setq company-tooltip-align-annotations t)
+  ;;   (setq web-mode-markup-indent-offset 2)
+  ;;   (setq web-mode-css-indent-offset 2)
+  ;;   (setq web-mode-code-indent-offset 2)
+  ;;   (setq web-mode-content-types-alist
+  ;;         '(("jsx" . "\\.js[x]?\\'"))))
+  
   (use-package prettier-js
-    :hook (json-mode . prettier-js-mode))
+    :after (rjsx-mode)
+    :hook ((json-mode . prettier-js-mode)
+           (rjsx-mode . prettier-js-mode)))
 #+end_src
 ** Beancount
 #+begin_src emacs-lisp
