--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -687,10 +687,11 @@ you!
     (setq lsp-keymap-prefix "C-c l")
     :config
     (lsp-enable-which-key-integration t))
-
+  
   (use-package lsp-ivy
+    :after lsp
     :commands lsp-ivy-workspace-symbol)
-
+  
   (use-package lsp-ui
     :hook (lsp-mode . lsp-ui-mode)
     :custom
