--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -37,14 +37,13 @@ Definitely need some packages to improve Emacs, let's load the archives.
 *** Color Theme
 #+begin_src emacs-lisp
   (use-package spacemacs-theme
-    :defer t)
+    :defer t
+    :init (load-theme 'spacemacs-dark t))
   
   (use-package one-themes
     :defer t)
   
-  (use-package doom-themes
-    :config
-    (load-theme 'doom-shades-of-purple t))
+  (use-package doom-themes)
 #+end_src
 *** UI Changes
 #+begin_src emacs-lisp
@@ -705,3 +704,22 @@ you!
               (lambda ()
                 (define-key yaml-mode-map "\C-m" 'newline-and-indent))))
 #+end_src
+** Golang
+#+begin_src emacs-lisp
+  ;; Set up before-save hooks to format buffer and add/delete imports.
+  ;; Make sure you don't have other gofmt/goimports hooks enabled.
+  (defun lsp-go-install-save-hooks ()
+    (add-hook 'before-save-hook #'lsp-format-buffer t t)
+    (add-hook 'before-save-hook #'lsp-organize-imports t t))
+  (add-hook 'go-mode-hook #'lsp-go-install-save-hooks)
+  
+  (use-package go-mode
+    :mode "\\.go$"
+    :config
+    (add-hook 'go-mode-hook 'lsp-deferred)
+    (lsp-go-install-save-hooks)
+  
+    (lsp-register-custom-settings
+     '(("gopls.completeUnimported" t t)
+       ("gopls.staticcheck" t t))))
+#+end_src 
