--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -248,15 +248,15 @@ I'm tired of having to manually reload this file.
                     (org-level-7 . 1.05)
                     (org-level-8 . 1.05)))
       (set-face-attribute (car face) nil :font "Iosevka Etoile" :weight 'normal :height (cdr face))))
-
+  
   (require 'org-habit)
   (add-to-list 'org-modules 'org-habit)
-
+  
   (defun nl/org-mode-setup ()
     (org-indent-mode)
     (variable-pitch-mode 1)
     (auto-fill-mode 1))
-
+  
   (use-package org
     :bind ([remap org-set-tags-command] . #'counsel-org-tag)
     :hook (org-mode . nl/org-mode-setup)
@@ -264,16 +264,16 @@ I'm tired of having to manually reload this file.
     (setq org-log-into-drawer t)
     (setq org-agenda-files '("~/Dropbox/org/inbox.org"))
     (setq org-contacts-files '("~/Dropbox/org/inbox.org"))
-
+  
     (setq org-ellipsis " ⌄"
           org-hide-emphasis-markers t)
-
+  
     (setq org-habit-graph-column 60)
     (setq org-tags-column 120
           org-auto-align-tags t)
     (setq org-startup-with-inline-images t
           org-image-actual-width 500)
-
+  
     (set-face-attribute 'org-block nil    :foreground nil :inherit 'fixed-pitch)
     (set-face-attribute 'org-table nil    :inherit 'fixed-pitch)
     (set-face-attribute 'org-date nil     :inherit 'fixed-pitch)
@@ -288,18 +288,18 @@ I'm tired of having to manually reload this file.
     (set-face-attribute 'org-meta-line nil :inherit '(font-lock-comment-face fixed-pitch))
     (set-face-attribute 'org-checkbox nil  :inherit 'fixed-pitch)
     (set-face-attribute 'org-agenda-calendar-sexp nil :inherit 'variable-pitch :foreground "LemonChiffon")
-
+  
     (setq org-refile-targets '((org-agenda-files :maxlevel . 3)))
-
+  
     (setq org-outline-path-complete-in-steps nil)
     (setq org-refile-use-outline-path t)
-
+  
     (setq org-todo-keywords
           '((sequence "TODO(t)" "NEXT(n!)" "|" "DONE(d!)")
             (sequence "BACKLOG(b!)" "PLAN(p!)" "READY(r!)" "ACTIVE(a!)" "REVIEW(e!)" "WAITING(w@/!)" "HOLD(h@/!)" "|" "COMPLETED(c!)" "CANCELLED(l@/!)")))
-
+  
     (setq org-todo-keyword-faces
-          '(("TODO" . org-warning)
+          '(("TODO" . (:foreground "red" :weight bold))
             ("NEXT" . (:foreground "gold" :weight bold))
             ("DONE" . (:foreground "lime green" :weight bold))
             ("BACKLOG" . (:foreground "dim gray" :weight regular))
@@ -311,7 +311,7 @@ I'm tired of having to manually reload this file.
             ("HOLD" . (:foreground "tomato" :weight bold))
             ("COMPLETED" . (:foreground "lime green" :weight bold))
             ("CANCELLED" . (:foreground "red" :weight bold))))
-
+  
     (setq org-capture-templates
           '(("t" "Tasks")
             ("tt" "Task" entry
@@ -351,12 +351,12 @@ I'm tired of having to manually reload this file.
   :NOTE: %^{Note}
   :END:"
              :empty-lines 0)))
-
+  
     (org-babel-do-load-languages
      'org-babel-load-languages
      '((emacs-lisp . t)
        (C . t)))
-
+  
     (setq org-tag-alist
           '((:startgroup)
             (:endgroup)
@@ -372,32 +372,32 @@ I'm tired of having to manually reload this file.
             ("productivity" . ?p)
             ("emacs" . ?e)
             ("repair" . ?r)))
-
+  
     (nl/org-heading-setup)
-
+  
     (general-define-key
      :states '(normal visual)
      :keymaps 'org-mode-map
      "TAB" 'org-cycle)
-
+  
     (general-define-key
      :states '(normal insert visual emacs)
      :keymaps 'org-agenda-mode-map
      "j" 'org-agenda-next-line
      "k" 'org-agenda-previous-line))
-
+  
   (use-package org-bullets
     :after org
     :hook (org-mode . org-bullets-mode))
-
+  
   (defun nl/org-mode-visual-fill ()
     (setq visual-fill-column-width 130
           visual-fill-column-center-text t)
     (visual-fill-column-mode 1))
-
+  
   (use-package visual-fill-column
     :hook (org-mode . nl/org-mode-visual-fill))
-
+  
   (use-package org-contrib
     :after org
     :config
