--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -508,16 +508,10 @@ I don't have to remember the keybinds anymore. This will help remind me what the
   (use-package company
     :ensure t
     :after lsp-mode
-    :hook (after-init . global-company)
-    :bind
-    (:map company-active-map
-          ("<tab>" . company-complete-selection))
-    (:map lsp-mode-map
-          ("<tab>" . company-indent-or-complete-common))
     :custom
     (company-minimum-prefix-length 1)
     (company-idle-delay 0.0))
-
+  
   (use-package company-box
     :after company-mode
     :hook (company-mode . company-box-mode))
@@ -628,62 +622,7 @@ you!
     (add-to-list 'auto-mode-alist '("\\.epub\\'" . nov-mode))
     (setq nov-text-width 120))
 #+end_src
-* Languages
-** Markdown
-#+begin_src emacs-lisp
-  ;; Markdown
-  (use-package markdown-mode
-    :commands (markdown-mode gfm-mode)
-    :mode (("README\\.md\\'" . gfm-mode)
-           ("\\.md\\'" . markdown-mode)
-           ("\\.markdown\\'" . markdown-mode))
-    :init (setq markdown-command "pandoc"))
-#+end_src
-** Web
-#+begin_src emacs-lisp
-  (use-package json-mode
-    :mode "\\.json$")
-
-  (use-package rjsx-mode
-    :mode (("\\.js\\'" . rjsx-mode)
-           ("\\.jsx\\'" . rjsx-mode))
-    :config (setq js-indent-level 2))
-
-  (defun setup-tide-mode()
-    "Setup function for tide"
-    (interactive)
-    (tide-setup)
-    (flycheck-mode +1)
-    (setq flycheck-check-syntax-automatically '(save mode-enabled))
-    (company-mode +1))
-
-  (use-package tide
-    :after (rjsx-mode company flycheck)
-    :hook (rjsx-mode . setup-tide-mode))
-
-  ;; (use-package js2-mode)
-
-  ;; (use-package web-mode
-  ;;   :mode (("\\.js\\'" . web-mode)
-  ;;          ("\\.jsx\\'" . web-mode)
-  ;;          ("\\.ts\\'" . web-mode)
-  ;;          ("\\.html\\'" . web-mode)
-  ;;          ("\\.tsx\\'" . web-mode))
-  ;;   :hook ((web-mode . lsp-deferred))
-  ;;   :config
-  ;;   (setq company-tooltip-align-annotations t)
-  ;;   (setq web-mode-markup-indent-offset 2)
-  ;;   (setq web-mode-css-indent-offset 2)
-  ;;   (setq web-mode-code-indent-offset 2)
-  ;;   (setq web-mode-content-types-alist
-  ;;         '(("jsx" . "\\.js[x]?\\'"))))
-
-  (use-package prettier-js
-    :after (rjsx-mode)
-    :hook ((json-mode . prettier-js-mode)
-           (rjsx-mode . prettier-js-mode)))
-#+end_src
-** Beancount
+** Plain Text Accounting
 #+begin_src emacs-lisp
   (use-package beancount-mode
     :straight (beancount-mode
@@ -697,9 +636,80 @@ you!
     ("C-c C-p" . outline-previous-visible-heading)
     :mode
     ("\\.bean\\(?:count\\)?\\'" . beancount-mode))
+  
+  (use-package ledger-mode
+    :mode "\\.ledger\\'"
+    :after company
+    :init
+    (add-hook 'ledger-mode-hook 'company-mode)
+    :config
+    (add-hook 'ledger-mode-hook
+              (lambda ()
+                (setq-local tab-always-indent 'complete)
+                (setq-local completion-cycle-threshold t)
+                (setq-local ledger-complete-in-steps t)))
+    (setq ledger-post-amount-alignment-at :end)
+    (setq ledger-post-amount-alignment-column 100))
 #+end_src
 
-** Language Server Protocol (lsp-mode)
+*** Markdown
+#+begin_src emacs-lisp
+  ;; Markdown
+  (use-package markdown-mode
+    :commands (markdown-mode gfm-mode)
+    :mode (("README\\.md\\'" . gfm-mode)
+           ("\\.md\\'" . markdown-mode)
+           ("\\.markdown\\'" . markdown-mode))
+    :init (setq markdown-command "pandoc"))
+#+end_src
+*** Web
+#+begin_src emacs-lisp
+  (use-package json-mode
+    :mode "\\.json$")
+  
+  (use-package rjsx-mode
+    :mode (("\\.js\\'" . rjsx-mode)
+           ("\\.jsx\\'" . rjsx-mode))
+    :config (setq js-indent-level 2))
+  
+  (use-package typescript-mode
+    :mode (("\\.tsx\\'" . typescript-mode)))
+  
+  (defun setup-tide-mode()
+    "Setup function for tide"
+    (interactive)
+    (tide-setup)
+    (flycheck-mode +1)
+    (setq flycheck-check-syntax-automatically '(save mode-enabled))
+    (company-mode +1))
+  
+  (use-package tide
+    :after (typescript-mode company flycheck)
+    :hook (typescript-mode . setup-tide-mode))
+  
+  ;; (use-package js2-mode)
+  
+  (use-package web-mode
+    :mode (("\\.js\\'" . web-mode)
+           ;; ("\\.jsx\\'" . web-mode)
+           ("\\.ts\\'" . web-mode)
+           ("\\.html\\'" . web-mode))
+           ;; ("\\.tsx\\'" . web-mode))
+    :hook ((web-mode . lsp-deferred))
+    :config
+    (setq company-tooltip-align-annotations t)
+    (setq web-mode-markup-indent-offset 2)
+    (setq web-mode-css-indent-offset 2)
+    (setq web-mode-code-indent-offset 2))
+    ;; (setq web-mode-content-types-alist
+    ;;       '(("tsx" . "\\.ts[x]?\\'"))))
+  
+  (use-package prettier-js
+    :after (rjsx-mode)
+    :hook ((json-mode . prettier-js-mode)
+           (rjsx-mode . prettier-js-mode)))
+#+end_src
+*** Language Server Protocol (lsp-mode)
 #+begin_src emacs-lisp
   (use-package lsp-mode
     :commands (lsp lsp-deferred)
@@ -718,7 +728,7 @@ you!
     :custom
     (lsp-ui-doc-position 'bottom))
 #+end_src
-** Yaml
+*** Yaml
 #+begin_src emacs-lisp
   (use-package yaml-mode
     :config
@@ -726,7 +736,7 @@ you!
               (lambda ()
                 (define-key yaml-mode-map "\C-m" 'newline-and-indent))))
 #+end_src
-** Golang
+*** Golang
 #+begin_src emacs-lisp
   ;; Set up before-save hooks to format buffer and add/delete imports.
   ;; Make sure you don't have other gofmt/goimports hooks enabled.
@@ -745,3 +755,4 @@ you!
      '(("gopls.completeUnimported" t t)
        ("gopls.staticcheck" t t))))
 #+end_src
+* Languages
