--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -10,7 +10,7 @@ Definitely need some packages to improve Emacs, let's load the archives.
   (setq package-archives '(("org" . "https://orgmode.org/elpa/")
                            ("melpa" . "https://melpa.org/packages/")
                            ("elpa" . "https://elpa.gnu.org/packages/")))
-
+  
   ;; Straight.el
   (defvar bootstrap-version)
   (let ((bootstrap-file
@@ -24,12 +24,12 @@ Definitely need some packages to improve Emacs, let's load the archives.
         (goto-char (point-max))
         (eval-print-last-sexp)))
     (load bootstrap-file nil 'nomessage))
-
+  
   (straight-use-package 'use-package)
   ;; Ok, putting this here gives me the latest version
   (straight-use-package 'org)
   (setq straight-use-package-by-default t)
-
+  
   (require 'use-package)
 #+end_src
 
@@ -42,39 +42,28 @@ Definitely need some packages to improve Emacs, let's load the archives.
   (use-package one-themes
     :defer t)
   
-  (use-package doom-themes)
-  
-  (use-package ewal
-    :init (setq ewal-use-builtin-always-p nil
-                ewal-use-builtin-on-failure-p t))
-  
-  (use-package ewal-spacemacs-themes
-    :config (progn
-              (load-theme 'ewal-spacemacs-modern t)
-              (enable-theme 'ewal-spacemacs-modern)))
-  (use-package ewal-evil-cursors
-    :after (ewal-spacemacs-themes)
-    :config (ewal-evil-cursors-get-colors
-             :apply t :spaceline t))
+  (use-package doom-themes
+    :config
+    (load-theme 'doom-tokyo-night t))
 #+end_src
 *** UI Changes
 #+begin_src emacs-lisp
   (setq inhibit-startup-message t)
-
+  
   (scroll-bar-mode -1) ; Disable scrollbar
   (tool-bar-mode -1) ; Disable toolbar
   (tooltip-mode -1) ; Disable tooltips
-
+  
   (menu-bar-mode -1) ; Disable the menu bar
-
+  
   ;; Set up the visual bell
   (setq visible-bell t)
-
+  
   (electric-pair-mode 1)
-
+  
   (column-number-mode)
   (global-display-line-numbers-mode t)
-
+  
   ;; Disable line numbers for some modes
   (dolist (mode '(org-mode-hook
                   term-mode-hook
@@ -84,10 +73,10 @@ Definitely need some packages to improve Emacs, let's load the archives.
                   org-agenda-mode-hook
                   eshell-mode-hook))
     (add-hook mode (lambda () (display-line-numbers-mode 0))))
-
+  
   (use-package rainbow-delimiters
     :hook (prog-mode . rainbow-delimiters-mode))
-
+  
   ;; Start Emacs fullscreen
   (custom-set-variables
    '(initial-frame-alist '((fullscreen . maximized))))
@@ -99,19 +88,18 @@ makes more sense to break up the headings.
 #+begin_src emacs-lisp
   ;; Set the font a little bigger in OS X
   (if (memq window-system '(mac ns))
-      (set-face-attribute 'default nil :font "Iosevka Nerd Font" :height 135)
-    (set-face-attribute 'default nil :font "Iosevka Nerd Font" :height 100))
+      (set-face-attribute 'default nil :font "FiraCode Nerd Font" :height 135)
+    (set-face-attribute 'default nil :font "FiraCode Nerd Font" :height 100))
   
   ;; Set the variable pitch face
   (set-face-attribute 'fixed-pitch nil
-                      :font "Iosevka Nerd Font Mono"
-                      :height 100)
+                      :font "FiraCode Nerd Font Mono"
+                      :height 135)
   
   ;; Set the variable pitch face
   (set-face-attribute 'variable-pitch nil
                       :font "Iosevka Etoile"
-                      :height 100)
-  
+                      :height 135)
 #+end_src
 ** Emacs auto-save & backup behavior
 #+begin_src emacs-lisp
@@ -143,7 +131,7 @@ make use of my new functionality.
 #+begin_src emacs-lisp
   (defvar nl/emacs-dotfile-directory "/Users/nland/dev/github.com/ndland/dotfiles/emacs/")
   (defvar nl/emacs-linux-dotfile-directory "/home/nland/dev/github.com/ndland/dotfiles/emacs/")
-
+  
   ;; Automatically tangle our Emacs.org config file when we save it
   (defun nl/org-babel-tangle-config ()
     "This function is to automatically write to '~/.emacs.d/init.el'."
@@ -154,7 +142,7 @@ make use of my new functionality.
       ;; Dynamic scoping to the rescue
       (let ((org-confirm-babel-evaluate nil))
         (org-babel-tangle))))
-
+  
   (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'nl/org-babel-tangle-config)))
 #+end_src
 ** Reload Emacs file
@@ -425,15 +413,15 @@ I'm tired of having to manually reload this file.
     (ivy-mode 1)
     :config
     (setq ivy-use-virtual-buffers t))
-
+  
   (use-package ivy-rich
     :after counsel
     :init (ivy-rich-mode 1))
-
+  
   (use-package all-the-icons-ivy-rich
     :ensure t
     :init (all-the-icons-ivy-rich-mode 1))
-
+  
   (use-package counsel
     :bind (("M-x" . counsel-M-x)
            ("C-x b" . counsel-ibuffer)
@@ -652,6 +640,7 @@ you!
     (setq ledger-post-amount-alignment-column 100))
 #+end_src
 
+* Languages
 *** Markdown
 #+begin_src emacs-lisp
   ;; Markdown
@@ -669,11 +658,13 @@ you!
   
   (use-package rjsx-mode
     :mode (("\\.js\\'" . rjsx-mode)
-           ("\\.jsx\\'" . rjsx-mode))
+           ("\\.jsx\\'" . rjsx-mode)
+           ("\\.tsx\\'" . rjsx-mode)
+           ("\\.ts\\'" . rjsx-mode))
     :config (setq js-indent-level 2))
   
-  (use-package typescript-mode
-    :mode (("\\.tsx\\'" . typescript-mode)))
+  ;; (use-package typescript-mode
+  ;;  :mode (("\\.tsx\\'" . typescript-mode)))
   
   (defun setup-tide-mode()
     "Setup function for tide"
@@ -692,7 +683,7 @@ you!
   (use-package web-mode
     :mode (("\\.js\\'" . web-mode)
            ;; ("\\.jsx\\'" . web-mode)
-           ("\\.ts\\'" . web-mode)
+           ;; ("\\.ts\\'" . web-mode)
            ("\\.html\\'" . web-mode))
            ;; ("\\.tsx\\'" . web-mode))
     :hook ((web-mode . lsp-deferred))
@@ -755,4 +746,3 @@ you!
      '(("gopls.completeUnimported" t t)
        ("gopls.staticcheck" t t))))
 #+end_src
-* Languages
