✨ Add LSP to NeoVim config
* Mostly default behaviors, but right now it's working for Lua

--- a/emacs/emacs.org
+++ b/emacs/emacs.org
@@ -250,7 +250,7 @@ I'm tired of having to manually reload this file.
     :hook (org-mode . nl/org-mode-setup)
     :config
     (setq org-log-into-drawer t)
-    (setq org-agenda-files '("~/Dropbox/org/inbox.org"))
+    ;; (setq org-agenda-files '("~/Dropbox/org/inbox.org"))
     (setq org-contacts-files '("~/Dropbox/org/inbox.org"))
   
     (setq org-ellipsis " ⌄"
